...
    ///     Строковое значение состояния игры
    private func getStateOfGame(game: CalendarCD) -> String {
        let formatter = DateFormatter()
        formatter.dateFormat = "YYYY-MM-dd-HH:mm"
        formatter.calendar = Calendar(identifier: .gregorian)
        if game.startdDate! > Date() {
            return "Запланирована"
        }
        if game.endDate == nil {
            return "Идет игра"
        }
        return "Завершена"
    }
}

// MARK: - CalendarPresenterProtocol

extension CalendarPresenter: CalendarPresenterProtocol {
...
