...
    func nextDateClicked()
    func previousDateClicked()
    func setTableView(with value: [GameResultProtocol], requestFrom: CalendarNavigation)
    func setCalendarView(with date: String)
}

private let cellIdentifier = "CalendarCell"

class CalendarVC: UIViewController {

    // MARK: - Свойства

    var configurator: CalendarConfiguratorProtocol = CalendarConfigurator()
...
